syntax = "proto3";
package account.user;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

/* A physical residence address.
 * NextId: 10 */
message UserAddress {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string street = 4;
  google.protobuf.StringValue unit = 5;
  string city = 6;
  string zip = 7;
  google.protobuf.Int32Value country_code = 8;
  string userId = 9;
}
